# wannier90

./: .codecov.yml  .cvsignore  .gitattributes  .gitignore  .markdownlint.yaml  .packit.yaml  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  404.html  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Makefile  README  README.install  README.rst  TODO.txt  autodoc.md  changes-gyrotropic.txt  doc.md  exa.werr  index.html  sitemap.xml  versions.json  visual  wannier90-config.cmake.in  wannier90.hh  wannier90.pc.cmake  wannier90.pc.in
src/: .gitignore  .hamiltonian.F90.swo  .kmesh.F90.swp  .panfs.6e8af682.1614010128800661000  .plot.F90.swp  .transport.F90.swp  CMakeLists.txt  Makefile  Makefile.2  Makefile.header  c_interface.F90  comms-abort.F90  comms.F90  constants.F90  disentangle.F90  error.F90  error_base.F90  hamiltonian.F90  hamiltonian.F901  io.F90  kmesh.F90  library_interface.F90  overlap.F90  parameters.F90  plot.F90  position.F90  pp.sh  readwrite.F90  settings.f90  sitesym.F90  tiny-lib2-demo.F90  tiny-lib2-demo.f90  transport.F90  types.F90  utility.F90  version  w90_sitesymmetry.F90  w90chk2chk.F90  w90lib.F90  w90spn2spn.F90  (+15 more)
src/gme/: berry.F90  kpath.F90  parameters.F90  postw90_common.F90
src/postw90/: CMakeLists.txt  berry.F90  berry.F90.bak  berry_ahc.F90  berry_wanint.F90  boltzwann.F90  comms.F90  dos.F90  dos_wanint.F90  geninterp.F90  get_oper.F90  gyrotropic.F90  gyrotropic.f90  kpath.F90  kpath_plot.F90  kslice.F90  nerwann.F90  postw90.F90  postw90_common.F90  postw90_param.F90  postw90_readwrite.F90  postw90_types.F90  pw90_library.F90  slice_plot.F90  spin.F90  spin_wanint.F90  tetrahedron.F90  wan_ham.F90  wanint_common.F90
test-suite/: .gitignore  CMakeLists.txt  DESCRIPTION  ENVIRONMENT  Makefile  README  README.md  clean_tests  ctest.fmf  ctest.sh  extract-postw90geninterp.x  extract-wannier.x  install_precommit.sh  jobconfig  run-postw90.sh  run-wannier.sh  run_tests  run_tests_travis.sh  testcode-README.txt  travis_copy_make.inc.sh  userconfig.tmp
test-suite/checkpoints/: .gitignore  README.txt
test-suite/checkpoints/cu_postw90/: copper.chk.fmt.bz2
test-suite/checkpoints/example02/: lead.chk.fmt.bz2  lead.eig
test-suite/checkpoints/fe_postw90/: Fe.amn  Fe.chk.fmt.bz2  Fe.mmn.bz2  Fe.win
test-suite/checkpoints/gaas_postw90/: gaas.mmn.bz2  gaas.win
test-suite/checkpoints/gaas_shc_postw90/: GaAs.amn.bz2  GaAs.chk.fmt.bz2  GaAs.eig  GaAs.mmn.bz2  GaAs.win  Makefile
test-suite/checkpoints/pt_shc_postw90/: Pt.amn.bz2  Pt.chk.fmt.bz2  Pt.eig  Pt.spn.bz2  Pt.win
test-suite/checkpoints/si_geninterp/: Makefile  silicon.chk.fmt.bz2  silicon.mmn.bz2  silicon.win
test-suite/checkpoints/si_geninterp_wsdistance/: silicon.amn  silicon.chk.fmt.bz2  silicon.win
test-suite/checkpoints/te_postw90/: Te.chk.fmt.bz2  Te.uHu.bz2
test-suite/checkpoints/testpostw90_nerwann/: InSb.amn  InSb.eig  InSb.mmn  InSb.nnkp  InSb.win
test-suite/checkpoints/znse_postw90/: ZnSe.amn  ZnSe.chk.fmt.bz2  ZnSe.eig  ZnSe.wout
test-suite/config/: README.md
test-suite/config/EPW_testfarm/: farm2_gcc520.inc  farm2_nag6.inc  farm2_pgi15.inc  farmer3_intel15.inc  farmer_gcc485.inc  farmer_gcc485_serial.inc  farmer_intel12.inc  (+2 more)
test-suite/example01/: UNK00005.1  UNK00008.1  benchmark.out.SVN.inp=gaas.win.args=1  gaas.mmn
test-suite/example03/: benchmark.out.SVN.inp=silicon.win.args=1
test-suite/example04/: copper.eig
test-suite/example21_As_sp/: GaAs.dmn  GaAs.eig  benchmark.out.SVN.inp=GaAs.win.args=1
test-suite/external-codes/: get-external-codes.sh  get-quantum-espresso.sh
test-suite/lib2-demo1/: .gitignore  CELL  KPOINTS  POSITIONS  demo.f90  wannier.chk  wannier.mmn  wannier.win  wannier.wout
test-suite/lib2-demo2/: CELL  EIG  KPOINTS  POSITIONS  demo.f90  gaas.eig  gaas.mmn  gaas.win  run.sh
test-suite/lib2-test/: Makefile  aux.mod  demo.f90  gaas.win
test-suite/library-mode-test/: .gitignore  AMN  MMN  Makefile  PARAMS  README  compare_results.py  gaas.win  run.sh  test_library.F90  test_library.f90
test-suite/libv2-demo/: CMakeLists.txt  gaas.amn
test-suite/libv2-demo2/: makefile  readme.md  wannier.cc
test-suite/package/: CMakeLists.txt
test-suite/pw_example05/: benchmark.out.SVN.inp=diamond.pw2wan.args=3  benchmark.out.SVN.inp=diamond.scf.args=2
test-suite/pw_example05_2/: benchmark.out.SVN.inp=diamond.nscf.args=2  benchmark.out.SVN.inp=diamond.win.args=4  diamond.nscf  diamond.scf  diamond.win
test-suite/pw_example05_3/: benchmark.out.SVN.inp=diamond.win.args=1
test-suite/pw_example06/: benchmark.out.SVN.inp=copper.nscf.args=2  benchmark.out.SVN.inp=copper.pw2wan.args=3  benchmark.out.SVN.inp=copper.scf.args=2  benchmark.out.SVN.inp=copper.win.args=1  benchmark.out.SVN.inp=copper.win.args=4  copper.pw2wan
test-suite/pw_example07/: benchmark.out.SVN.inp=silane.nscf.args=2  benchmark.out.SVN.inp=silane.pw2wan.args=3  benchmark.out.SVN.inp=silane.scf.args=2  benchmark.out.SVN.inp=silane.win.args=1  benchmark.out.SVN.inp=silane.win.args=4  silane.scf  silane.win
test-suite/test_basic1/: wannier.mmn
test-suite/test_basic2/: wannier.win
test-suite/test_nnkpt1/: benchmark.out.SVN.inp=wannier.win.args=5
test-suite/test_nnkpt3/: benchmark.out.SVN.inp=wannier.win.args=5
test-suite/test_nnkpt5/: benchmark.out.SVN.inp=wannier.win.args=6  wannier.win
test-suite/test_precond/: benchmark.out.SVN.inp=gaas2.win.args=1
test-suite/test_si_geninterp/: benchmark.out.SVN.inp=silicon.win.args=1  silicon.win
test-suite/test_si_geninterp_wsdistance/: benchmark.out.SVN.inp=silicon.win.args=7  silicon_geninterp.kpt
test-suite/testcode/: .gitignore
test-suite/tests/: .gitignore  CMakeLists.txt  jobconfig  userconfig
test-suite/tools/: configure_travis_compilation.sh  fprettify-wrapper.py  fprettify_wrapper.py  run_precommit.sh  run_tests_travis.sh
test-suite/wan_benzene_gamma_val/: benzene.mmn  benzene.win
test-suite/wan_benzene_gamma_valcond/: benchmark.out.SVN.inp=benzene.win.args=1  benzene.amn  benzene.eig
test-suite/wan_lavo3_dissphere/: LaVO3.amn  benchmark.out.SVN.inp=LaVO3.win.args=1
(+1437 files in other folders)
